<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="add_usr_name"> Name</string>
    <string name="toppings" tools:ignore="MissingTranslation">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate" tools:ignore="MissingTranslation">Chocolate</string>
    <string name="quantity" tools:ignore="MissingTranslation">Quantity</string>
    <string name="order_summary" tools:ignore="MissingTranslation">Order summary</string>
    <string name="order_button" tools:ignore="MissingTranslation"> order</string>

</resources>
